# todoapp-react-django

./: .gitignore
backend/: pyproject.toml
backend/api/: serializers.py  urls.py  views.py
backend/backend/: settings.py
backend/todo/: models.py
backend/todo/migrations/: 0001_initial.py  0002_rename_created_at_todo_updated_at_alter_todo_user.py
