[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Todo APP"
authors = ["Ariel Mesquita <arielmesquita@live.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"
pep8 = "^1.7.1"
flake8 = "^4.0.1"
mypy = "^0.942"
pylint = "^2.13.5"
pylint-django = "^2.5.3"
ipython = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
